--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17"
   }
 }
